fix alignment of chart footers

--- a/static/css/place/place.scss
+++ b/static/css/place/place.scss
@@ -140,6 +140,10 @@ $sidebar-top-padding: 132px;  // Keep in sync with place.ts: Y_SCROLL_LIMIT
   margin-top: -3px;
 }
 
+.svg-container {
+  flex: 1 1 auto;
+}
+
 .chart-container {
   border: .5px solid #dee2e6;
   border-radius: 3px;
